--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alt-logger",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Logger for alt",
   "main": "lib",
   "jsnext:main": "src",
@@ -8,7 +8,7 @@
     "build": "npm run clean && npm run transpile",
     "clean": "rimraf lib",
     "transpile": "babel src --out-dir lib",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -34,9 +34,10 @@
     "flux": "^2.1.1"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "rimraf": "^2.5.4"
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "rimraf": "^2.6.1"
   }
 }
